# CPF-searcher

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: auth.py  database.py  main.py
app/config/: env.py
app/controllers/: auth.py  criminal_records_controller.py  person_controller.py
app/domain/: criminal_records.py  person.py
app/domain/schemas/: auth_response.py  criminal_records_response.py  personResponse.py  person_response.py
app/repositories/: criminal_records.py  person_repository.py
app/services/: auth.py  criminal_records_service.py  personService.py  person_service.py
app/shared/: dependencies.py
app/shared/consumers/: generic.py
app/shared/consumers/auth/: auth.py
app/shared/consumers/squid_users/: squid_users.py
app/shared/helpers/: format_cpf.py  format_rg.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Login.jsx  styles.css
frontend/src/api/: people.js
sql/: 1.create_tables.sql  2.seed.sql  3.create_criminal_records_table.sql  4.rename_schema_to_english.sql  5.create_criminal_record_code_trigger.sql  6.create_criminal_records_timestamps.sql  7. duplicate_constraint.sql  8.optimize_criminal_record_code_trigger.sql  create_criminal_records_table.sql  create_tables.sql  seed.sql
