[project]
name = "cpf-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.1.1",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
